<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CP-01-B</string>
    <string name="gold_sale_text">Gold sale</string>
    <string name="amount_of_gold_text">Enter the amount of gold</string>
    <string name="price_gram_text">Enter the price per gram</string>
    <string name="calculate_total_text">Calculate total</string>
    <string name="total_result_text">Total: US$ %1$.2f</string>
    <string name="fill_all_fields_text">Fill in all fields!</string>
</resources>