<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_layout">

        <LinearLayout
            android:id="@+id/containerForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivIconGold"
                android:layout_width="@dimen/icon_gold_size"
                android:layout_height="@dimen/icon_gold_size"
                android:src="@drawable/icongoldbar" />

            <TextView
                android:id="@+id/tvVendaOuro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gold_sale_text"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/gold_sale_textsize"
                android:textStyle="bold" />

            <View
                android:layout_marginVertical="@dimen/margin_top_size"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCC"/>

            <EditText
                android:id="@+id/etMountGold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_of_gold_text"
                android:inputType="number" />

            <EditText
                android:id="@+id/etPriceGram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_gram_text"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/btCalculateTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_total_text" />

            <TextView
                android:id="@+id/tvTotalResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_size"
                android:text="@string/total_result_text"
                android:visibility="invisible"
                android:textAlignment="center"
                android:textSize="@dimen/result_textsize" />

        </LinearLayout>
    </FrameLayout>

</ScrollView>